# Parallel_computing

./: CMakeLists.txt  main.cpp  task1_maxminsearch.cpp  task1_maxminsearch.hpp  task2_mmult.cpp  task2_mmult.hpp  task3_mvmult.cpp  task3_mvmult.hpp  task3_stats.xlsx  task5_substrsearch.cpp  task5_substrsearch.hpp  task5_test.txt  utils.cpp  utils.hpp
